config("kjson") {
  include_dirs = [
    "//third_party/kjson/",
    "//third_party/json/include/"
  ]
}

config("html") {
  include_dirs = [
    "//third_party/HtmlBuilder/include"
  ]
}

config("cpr_library") {
  include_dirs = [cpr_include]
  libs = ["cpr"]
  visibility = [ ":cpr_lib" ]
}

group ("cpr_lib") {
  public_configs = [":cpr_library"]
}

config("knlp") {
  include_dirs = [
    "//third_party/knlp/src"
  ]
}

source_set("knlp_sources") {
  sources = [
    "//third_party/knlp/src/nlp/nlp.cpp"
  ]
}

config("process_executor") {
  include_dirs = [
    "//third_party/process_executor"
  ]
}

config("inih") {
  include_dirs = [
    "//third_party/inih/cpp"
  ]
}

source_set("ini_reader") {
  sources = [
    "//third_party/inih/ini.c",
    "//third_party/inih/cpp/INIReader.cpp"
  ]
}

source_set("ktube_sources") {

  deps = [
    ":ini_reader",
    ":knlp_sources"
  ]

  public_deps = [":cpr_lib"]

  public_configs = [
    ":inih",
    ":kjson",
    ":html",
    ":knlp",
    ":process_executor"
  ]

  include_dirs = [
    "//src",
  ]

  sources = [
    "//src/ktube/api/youtube.cpp",
    "//src/ktube/api/youtube_live.cpp",
    "//src/ktube/api/youtube_comment.cpp",
    "//src/ktube/common/constants.cpp",
    "//src/ktube/api/analysis/tools.cpp",
    "//src/ktube/auth/auth.cpp"
  ]
}

executable("ktube") {
  deps = [
    ":ktube_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  sources = [
    "//src/ktube/main.cpp"
  ]
}

shared_library("ktube_lib") {
  deps = [
    ":ktube_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]
}
